<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:padding="15dp"
    tools:context=".ui.addPurchase.AddPurchaseFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:orientation="horizontal"
        android:padding="5dp">

        <Button
            android:id="@+id/btnScan"
            style="@style/btn"
            android:layout_width="170dp"
            android:layout_height="match_parent"
            android:text="@string/scan" />

        <View
            android:layout_width="20px"
            android:layout_height="1dp" />

        <Button
            android:id="@+id/btnUpload"
            style="@style/btn"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/upload" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Date"
        style="@style/tv"/>

    <EditText
        android:id="@+id/edtDate"
        android:clickable="false"
        android:cursorVisible="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:hint="@string/hint_purchase_date"
        style="@style/edit"/>

    <TextView
        android:id="@+id/textView10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name_of_purchase"
        style="@style/tv"/>

    <EditText
        android:id="@+id/edtName"
        android:hint="@string/hint_purchase_name"
        style="@style/edit"/>

    <TextView
        android:id="@+id/textView13"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/amount_of_purchase"
        style="@style/tv"/>

    <EditText
        android:id="@+id/edtAmount"
        style="@style/edit"
        android:layout_marginBottom="20dp"
        android:hint="@string/hint_purchase_amount"
        android:inputType="number" />

    <Spinner
        android:id="@+id/spnCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btnSubmit"
        style="@style/btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:text="@string/submit" />

</LinearLayout>