<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:padding="15dp"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="257dp"
        android:src="@drawable/buddy_logo" />

    <LinearLayout
        android:layout_width="376dp"
        android:layout_height="321dp"
        android:layout_gravity="center"
        android:background="@color/greygreen"
        android:orientation="vertical"
        android:padding="15dp">

        <TextView
            android:id="@+id/textView"
            style="@style/logintv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/email" />

        <EditText
            android:id="@+id/edtEmail"
            style="@style/loginedt"
            android:hint="@string/hint_email" />

        <TextView
            android:id="@+id/textView2"
            style="@style/logintv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password" />

        <EditText
            android:id="@+id/edtPassword"
            style="@style/loginedt"
            android:hint="@string/hint_password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/btnLogin"
            style="@style/loginbtn"
            android:layout_width="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="20dp"
            android:text="@string/login" />

        <LinearLayout
            android:layout_width="332dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView4"
                style="@style/logintv"
                android:layout_width="95dp"
                android:layout_height="match_parent"
                android:text="@string/go_login" />

            <Button
                android:id="@+id/btnRegister"
                style="@style/loginbtn"
                android:layout_width="wrap_content"
                android:text="@string/go_to_login" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
