<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.example.budgetbuddyapp.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.budgetbuddyapp.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_purchase_history"
        android:name="com.example.budgetbuddyapp.ui.purchaseHistory.PurchaseHistoryFragment"
        android:label="@string/title_purchase_history"
        tools:layout="@layout/fragment_purchase_history" />

    <fragment
        android:id="@+id/navigation_discounts"
        android:name="com.example.budgetbuddyapp.ui.discounts.DiscountsFragment"
        android:label="@string/title_discounts"
        tools:layout="@layout/fragment_discounts" />
</navigation>