<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:padding="15dp"
    tools:context=".ui.home.HomeFragment">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="372dp"
        android:src="@drawable/buddy_base_speech" />

    <Button
        android:id="@+id/btnAddPurchase"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageView3"
        android:layout_centerHorizontal="true"
        android:text="@string/add_purchase" />

    <Button
        android:id="@+id/btnAddIncome"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnAddPurchase"
        android:layout_centerHorizontal="true"
        android:text="@string/add_income" />

    <Button
        android:id="@+id/btnViewPurchaseHistory"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnAddIncome"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="4dp"
        android:text="@string/view_purchase_history" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="42dp"
        android:layout_alignTop="@id/imageView3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="291dp"
        android:layout_marginBottom="79dp"
        android:text="@string/budgetleft"
        android:textColor="@color/green"
        android:textSize="15dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/imageView3"
        android:layout_alignParentTop="false"
        android:layout_marginLeft="55dp"
        android:layout_marginTop="85dp"
        android:layout_marginBottom="195dp"
        android:text="@string/welcome"
        android:textColor="@color/black"
        android:textSize="17dp" />

    <TextView
        android:id="@+id/txtDailyBudget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/imageView3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="244dp"
        android:textColor="@color/green"
        android:textSize="30sp"
        android:textStyle="bold" />

</RelativeLayout>