<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:padding="15dp"
    tools:context=".ui.purchaseHistory.PurchaseHistoryFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right">

        <Spinner
            android:id="@+id/graphSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/graphsSpinner" />

        <Spinner
            android:id="@+id/timeSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/timePeriodSpinner" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="201dp">

        <com.anychart.AnyChartView
            android:id="@+id/pieChartView"
            android:layout_width="match_parent"
            android:layout_height="250dp" />

        <com.anychart.AnyChartView
            android:id="@+id/lineGraphChartView"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </RelativeLayout>

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:paddingBottom="8dp"
        android:text="@string/title_purchase_history"
        android:textColor="@color/black"
        android:textSize="20dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingLeft="2dp"
            android:paddingRight="2dp"
            android:text="@string/Name"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="16dp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingLeft="2dp"
            android:paddingRight="2dp"
            android:text="@string/Date"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="16dp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingLeft="2dp"
            android:paddingRight="2dp"
            android:text="@string/Category"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="16dp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.75"
            android:paddingLeft="2dp"
            android:paddingRight="2dp"
            android:text="@string/Amount"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="16dp" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/pHRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="306dp" />

</LinearLayout>